# FastBleed

./: .gitignore  .gitmodules  CMakeLists.txt  FastBleed.cpp  README.md  TODO  main.cpp  properties.hpp
cfg_samples/: README.md  config.json  config_program_sample.json  config_uinput.json
cmake/: compiller_props.cmake  submodules.cmake
config/: config.cpp  config.hpp
include/: properties.hpp  runtime.hpp
include/config/: config.hpp
include/platform/apple/: platform.hpp
include/platform/unix/: platform.hpp
include/ui/: action.h  action.ui  feedback.hpp  gui.hpp  mainwindow.h  trigger.h  trigger.ui
include/utils/: args.hpp  config.hpp  timings.hpp
platform/: platform.h
platform/apple/: platform.cpp
platform/unix/: Wayland.cpp  Wayland.hpp  X11.cpp  X11.hpp  platform.cpp  platform.hpp
platform/winapi/: platform.cpp
src/: FastBleed.cpp  config.cpp  excepts.cpp  excepts.hpp  properties.hpp  runtime.hpp
src/config/: config.cpp  config.hpp
src/platform/: platform.hpp
src/platform/apple/: platform.cpp
src/platform/unix/: Wayland.cpp  Wayland.hpp  X11.cpp  X11.hpp  platform.cpp  platform.hpp  uinput.cpp
src/platform/winapi/: platform.cpp  platform.hpp
src/ui/: action.cpp  action.ui  feedback.cpp  feedback.hpp  gui.cpp  gui.hpp  mainwindow.cpp  mainwindow.ui  trigger.cpp
src/utils/: args.cpp  args.hpp  args_parser.cpp  config.cpp  config.hpp  timings.cpp  timings.hpp
ui/: event.cpp  event.h  event.hpp  feedback.cpp  feedback.hpp
